@@ -183,6 +183,8 @@
 
             Configuration data for complete CsPad device.
 		
+			<tag name="config-type"/>
+		
             <attribute name="_concentratorVersion" type="uint32_t" accessor="concentratorVersion">
             </attribute>
 
@@ -238,6 +240,8 @@
 		
             Configuration data for complete CsPad device.
         
+			<tag name="config-type"/>
+		
             <attribute name="_concentratorVersion" type="uint32_t" accessor="concentratorVersion">
             </attribute>
 
@@ -311,6 +315,8 @@
 		
             Configuration data for complete CsPad device.
         
+			<tag name="config-type"/>
+		
             <attribute name="_concentratorVersion" type="uint32_t" accessor="concentratorVersion">
             </attribute>
 
